fix hero and awards on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -125,7 +125,6 @@ body {
     min-height: 300px;
     background-image: linear-gradient(to bottom, #2a2a2a85, #000000ba),
       url("./assets/hero.webp");
-    background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -133,6 +132,11 @@ body {
     height: 100%;
     display: flex;
     align-items: center;
+
+    @media screen and (min-width: 1500px) {
+      background-attachment: fixed;
+    }
+
     .landing {
       display: flex;
       justify-content: center;
